public enum BlockUIType
{
    Null, MachineSelect, MachineModify, TrackModify
}
